finished expanding cards proj

--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Expanding Cards</title>
 </head>
 <body>
-    <h1>hello</h1>
-
+    <div class="container">
+        <div class="panel active" style="background-color:red">
+            <h3>First One</h3>
+        </div>
+        <div class="panel" style="background-color:blue">
+            <h3>Second One</h3>
+        </div>
+        <div class="panel" style="background-color:green">
+            <h3>Third One</h3>
+        </div>
+        <div class="panel" style="background-color:orange">
+            <h3>Fourth One</h3>
+        </div>
+        <div class="panel" style="background-color:purple">
+            <h3>Fifth One</h3>
+        </div>
+        <div class="panel" style="background-color:gray">
+            <h3>Sixth One</h3>
+        </div>
+    </div>
 
 
     <script src="script.js"></script>
